# rust-embedded

./: Cargo.toml  stuff.txt
.cargo/: config
src/: main.rs
