[package]
authors = ["root"]
name = "rust-embedded"
version = "0.1.0"
edition = "2018"

[dependencies]
# cortex-m-rtfm = "0.4"
cortex-m-rt = "0.6.7"
# panic-semihosting = "0.5"
# panic-halt = "0.2.0"
cortex-m-semihosting = "0.3"
nrf52832-hal = "0.6"
nrf52832-pac = "0.6"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"