[package]
authors = ["root"]
name = "rust-embedded"
version = "0.1.0"
edition = "2018"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.7"
# cortex-m-rtfm = "0.4"
# panic-semihosting = "0.5"
panic-halt = "0.2.0"

[dependencies.nrf52832-pac]
version = "0.6"
optional = true
default-features = false

[dependencies.nrf52832-hal]
version = "0.6"
optional = true
default-features = false

[features]
52832 = ["nrf52832-hal", "nrf52832-pac"]
default = ["52832"]

[profile.release]
panic = "abort"
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

